loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:11: error: not found: value sortieTrouve
} while (sortieTrouve()!) 
         ^