loopdowhile.Poucet1.scala.code
var i=0
var j=0
do{
  for (i <- 1 to 5){
    if (estSurBiscuit) {
      j+=1
    }
  }
  if (j<=2) droite()
  else gauche()
} while (sortieTrouve()!)